Updated AoCDownloader and made appropriate changes to Main